# playground

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  README.md  settings.gradle.kts
backend/: .dockerignore  (+2 more)
backend/fastapi/agent-tools/: Dockerfile  README.md  main.py  pyproject.toml
backend/fastapi/agent-tools/app/: docs_client.py  llm_client.py  main.py
backend/fastapi/agent-tools/app/routers/: tools.py
backend/fastapi/agent-tools/architecture/: algorithm.py  brief_extractor.py  deps.py  models.py  serializer.py  summary.py  workflow.py
backend/fastapi/agent-tools/architecture/api/: deps.py  dtos.py
backend/fastapi/agent-tools/architecture/app/: edits.py  program_wire.py  refine_recipe.py  refine_workflow.py  stages.py  state.py  workflow.py
backend/fastapi/agent-tools/architecture/domain/: algorithm.py  models.py  summary.py
backend/fastapi/agent-tools/architecture/infra/: blob_storage.py  glb_serializer.py  persistence.py  serializer.py
backend/fastapi/agent-tools/shared_kernel/: config.py  context.py  docs_client.py  errors.py  llm.py  models.py
backend/fastapi/agent-tools/tests/: test_algorithm.py  test_blob_storage.py  test_brief_extraction.py  test_brief_extractor.py  test_classify.py  test_content_disposition.py  test_derive.py  test_edits.py  test_errors.py  test_fetch_brief.py  test_generate_massing_request.py  test_glb_serializer.py  test_load_recipe.py  test_locate.py  test_reconcile.py  test_refine_workflow.py  test_resolve.py  test_serializer.py  test_slug.py  test_stages.py  test_stream_endpoint.py  test_summary.py  test_workflow.py
(+1153 files in other folders)
